changes on portfolio

--- a/portfolio-cv/index.html
+++ b/portfolio-cv/index.html
@@ -8,18 +8,18 @@
   <title>Portafolio CV</title>
   <meta name="description"
     content="Hola bienvenid@ a mi Portafolio Profesional, soy Jonathan MirCha, Desarrollador Web">  <link rel="favicon" href="">
-  <link rel="canonical" href="">
+  <link rel="canonical" href="https://mcarlos23.github.io/yt-taller-maquetacion/portfolio-cv/">
   <link rel="apple-touch-icon" href="">
   <meta name="theme-color" content="#d9006">
   <meta name="twitter:card" content="summary">
   <meta property="og:title"  name="twitter:title" content="Portafolio CV">
   <meta property="og:image" name="twitter:image" content="*******">
-  <meta property="og:url" name="twitter:url" content="">
+  <meta property="og:url" name="twitter:url" content="https://mcarlos23.github.io/yt-taller-maquetacion/portfolio-cv/">
   <meta property="og:description" name="twitter:description" content="Hola bienvenid@ a mi Portafolio Profesional, soy Jonathan MirCha, Desarrollador We">
   <meta property="og:type" content="website">
 
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header class="header">
@@ -43,7 +43,7 @@
   </header>  
   <section id="inicio" class="home">
     <article class="hero-image" 
-      style="--image: url('/assets/hero-image-home.jpg');
+      style="--image: url('./assets/hero-image-home.jpg');
       --attachment: fixed;">
       <aside class="hero-image-opacity" style="--opacity-color: var(--black-alpha-color)">
         <div class="here-image-content">
