update on path of files

--- a/portfolio-cv/index.html
+++ b/portfolio-cv/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://mcarlos23.github.io/style.css">
   <title>Portafolio CV</title>
   <meta name="description"
     content="Hola bienvenid@ a mi Portafolio Profesional, soy Jonathan MirCha, Desarrollador Web">  <link rel="favicon" href="">
