update to fix paths for github-pages

--- a/portfolio-cv/index.html
+++ b/portfolio-cv/index.html
@@ -14,7 +14,7 @@
   <meta name="theme-color" content="#d9006">
   <meta name="twitter:card" content="summary">
   <meta property="og:title"  name="twitter:title" content="Portafolio CV">
-  <meta property="og:image" name="twitter:image" content="*******">
+  <meta property="og:image" name="twitter:image" content="https://mcarlos23.github.io/yt-taller-maquetacion/assets/hero-image-home.jpg">
   <meta property="og:url" name="twitter:url" content="https://mcarlos23.github.io/yt-taller-maquetacion/portfolio-cv/">
   <meta property="og:description" name="twitter:description" content="Hola bienvenid@ a mi Portafolio Profesional, soy Jonathan MirCha, Desarrollador We">
   <meta property="og:type" content="website">
@@ -283,7 +283,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-1.jpg" alt="Trabajo 1">
+          <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 1</h3>
             <p>
@@ -309,7 +309,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-2.jpg" alt="Trabajo 2">
+          <img src="assets/portfolio-2.jpg" alt="Trabajo 2">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 2</h3>
             <p>
@@ -335,7 +335,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-3.jpg" alt="Trabajo 3">
+          <img src="assets/portfolio-3.jpg" alt="Trabajo 3">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 3</h3>
             <p>
@@ -361,7 +361,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-4.jpg" alt="Trabajo 4">
+          <img src="assets/portfolio-4.jpg" alt="Trabajo 4">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 4</h3>
             <p>
@@ -387,7 +387,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-5.jpg" alt="Trabajo 1">
+          <img src="assets/portfolio-5.jpg" alt="Trabajo 1">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 5</h3>
             <p>
@@ -413,7 +413,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
         </a>
         <article class="portfolio-modal">
-          <img src="/assets/portfolio-6.jpg" alt="Trabajo 1">
+          <img src="assets/portfolio-6.jpg" alt="Trabajo 1">
           <div class="portfolio-info">
             <h3>Nombre del Proyecto 6</h3>
             <p>
@@ -578,7 +578,7 @@
         >
         <textarea name="comments" cols="50" rows="10" placeholder="Dejame tus comentarios *" required></textarea>
         <div class="contact-form-loader text-center none">
-          <img src="/assets/loader.svg" alt="Enviando...">
+          <img src="assets/loader.svg" alt="Enviando...">
         </div>
         <input type="submit" class="btn" value="ENVIAR MENSAJE">
       </form>
